--- a/react/index.html
+++ b/react/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="root">Loading...</div>
-  <script type="module" src="https://next.esm.sh/x?" main="./main.tsx"></script>
+  <script type="module" src="https://next.esm.sh/x" main="./main.tsx"></script>
 </body>
 </html>
