--- a/svelte/index.html
+++ b/svelte/index.html
@@ -7,7 +7,7 @@
   <script type="importmap">
     {
       "imports": {
-        "svelte": "https://next.esm.sh/svelte@4.2.19"
+        "svelte": "https://next.esm.sh/svelte@5.16.0"
       }
     }
   </script>
@@ -15,5 +15,5 @@
 <body>
   <div id="root"></div>
 </body>
-<script type="module" src="https://next.esm.sh/x?" main="./main.ts"></script>
+<script type="module" src="https://next.esm.sh/x" main="./main.ts"></script>
 </html>
