--- a/unocss/index.html
+++ b/unocss/index.html
@@ -18,6 +18,6 @@
   <div class="absolute bottom-5 w-full flex justify-center">
     <button class="btn">Click Me</button>
   </div>
-  <script type="module" src="https://next.esm.sh/x?" main="./main.tsx"></script>
+  <script type="module" src="https://next.esm.sh/x" main="./main.tsx"></script>
 </body>
 </html>
