--- a/svelte/index.html
+++ b/svelte/index.html
@@ -16,5 +16,5 @@
 <body>
   <div id="root"></div>
 </body>
-<script src="https://next.esm.sh/x" main="./main.ts"></script>
+<script src="https://next.esm.sh/x" href="./main.ts"></script>
 </html>
