--- a/unocss/index.html
+++ b/unocss/index.html
@@ -12,13 +12,13 @@
       }
     }
   </script>
-  <script src="https://next.esm.sh/x" main="./uno.css"></script>
+  <script src="https://next.esm.sh/x" href="./uno.css"></script>
 </head>
 <body>
   <div id="root"><p class="flex justify-center text-gray-400 mt8">Loading...</p></div>
   <div class="absolute bottom-5 w-full flex justify-center">
     <button class="btn">Click Me</button>
   </div>
-  <script src="https://next.esm.sh/x" main="./main.tsx"></script>
+  <script src="https://next.esm.sh/x" href="./main.tsx"></script>
 </body>
 </html>
