--- a/preact/index.html
+++ b/preact/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="https://next.esm.sh/x" main="./main.tsx"></script>
+  <script src="https://next.esm.sh/x" href="./main.tsx"></script>
 </body>
 </html>
