--- a/vue/index.html
+++ b/vue/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="root">Loading...</div>
-  <script src="https://next.esm.sh/x" main="./main.ts"></script>
+  <script src="https://next.esm.sh/x" href="./main.ts"></script>
 </body>
 </html>
