--- a/svelte/index.html
+++ b/svelte/index.html
@@ -8,7 +8,7 @@
   <script type="importmap">
     {
       "imports": {
-        "svelte": "https://next.esm.sh/svelte@5.16.0"
+        "svelte": "https://esm.sh/svelte@5.16.0"
       }
     }
   </script>
@@ -16,5 +16,5 @@
 <body>
   <div id="root"></div>
 </body>
-<script src="https://next.esm.sh/x" href="./main.ts"></script>
+<script src="https://esm.sh/x" href="./main.ts"></script>
 </html>
