--- a/preact/index.html
+++ b/preact/index.html
@@ -7,13 +7,13 @@
   <script type="importmap">
     {
       "imports": {
-        "preact": "https://next.esm.sh/preact@10.24.1"
+        "preact": "https://esm.sh/preact@10.24.1"
       }
     }
   </script>
 </head>
 <body>
   <div id="root"></div>
-  <script src="https://next.esm.sh/x" href="./main.tsx"></script>
+  <script src="https://esm.sh/x" href="./main.tsx"></script>
 </body>
 </html>
