--- a/react/index.html
+++ b/react/index.html
@@ -7,14 +7,14 @@
   <script type="importmap">
     {
       "imports": {
-        "react": "https://next.esm.sh/react@19.0.0",
-        "react-dom": "https://next.esm.sh/react-dom@19.0.0"
+        "react": "https://esm.sh/react@19.0.0",
+        "react-dom": "https://esm.sh/react-dom@19.0.0"
       }
     }
   </script>
 </head>
 <body>
   <div id="root">Loading...</div>
-  <script src="https://next.esm.sh/x" href="./main.tsx"></script>
+  <script src="https://esm.sh/x" href="./main.tsx"></script>
 </body>
 </html>
