--- a/vue/index.html
+++ b/vue/index.html
@@ -8,13 +8,13 @@
   <script type="importmap">
     {
       "imports": {
-        "vue": "https://next.esm.sh/vue@3.5.8"
+        "vue": "https://esm.sh/vue@3.5.8"
       }
     }
   </script>
 </head>
 <body>
   <div id="root">Loading...</div>
-  <script src="https://next.esm.sh/x" href="./main.ts"></script>
+  <script src="https://esm.sh/x" href="./main.ts"></script>
 </body>
 </html>
